@@ -66,7 +66,7 @@ dt {
 <tr>
 <td><a href="#shoutcastPassword">shoutcastPassword</a></td>
 <td><a href="#vote_allow_cointoss">vote_allow_cointoss</a></td>
-<td>&nbsp;</td>
+<td><a href="#g_headshot">g_headshot</a></td>
 <td>&nbsp;</td>
 </tr>
 </table>
@@ -3267,6 +3267,12 @@ the fake clients Denial of Service attack.</p>
 <p>Enables shoutcaster status on the server.</p>
 <p>NOTE: Shoutcaster status is only available with installed etpub client > 20090112.</p>
 <p>Default is "none"</p>
+
+<a name="g_headshot"></a>
+<dt>g_headshot [0|1]
+<dd>
+<p>Enables/Disables headshot mode. 1 is enabled, 0 is disabled</p>
+<p>Default is 0</p>
 
 <hr>
 <a name="mapvoting"></a>
